[package]
name = 'cl-generic-vec'
version = '0.3.3'
authors = ['Conrad Ludgate <conradludgate@gmail.com>']
edition = '2021'
license = 'MIT/Apache-2.0'
description = 'a vector implementation that can be used in `no_std` envioronments'
repository = 'https://github.com/conradludgate/generic-vec'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ['std']

std = ['alloc']
alloc = []
nightly = []

[dependencies]

[dev-dependencies]
mockalloc = '0.1'
static-alloc = '0.2'
